--- a/Camazon.html
+++ b/Camazon.html
@@ -22,6 +22,10 @@
             margin: 50px;
             margin-top: 15px;
           }
+          #ko {
+            font-weight: bold;
+            text-align: center;
+          }
     </style>
     <body>
         <h1 id="kareem">Welcome To Camazon</h1>
@@ -245,7 +249,7 @@
         </div>
         <footer>
             <footer>
-                <p>&copy; 2025 Abdullah. All rights reserved.</p>
+                <p id="ko">&copy; 2025 Abdullah. All rights reserved.</p>
             </footer>
         </footer>
     </body>
